2011-07-13  Simson Garfinkel  <simsong@imac3.home>

	* src/display.cpp (display_realtime_stats): moved output of realtime_stats from file_name_annotation to a seperate output, so that display_realtime_stats can now take a const file_data_hasher.

	* src/hash.cpp: changed update_display to display_realtime_stats() and moved to display.cpp

2011-07-10  Simson Garfinkel  <simsong@imac3.home>

	* src/sha1.c: removed copy on all algorithms except sha1; that copy is now done within the sha1 update function, where it should be.
	

	* src/md5.h: all update functions modified to take size_t as the length, becuase you can't pass a size larger than size_t.

2011-07-07  Simson Garfinkel  <simsong@t.nitroba.org>

	* src/dig.cpp (process_dir): modified conditional compilation for WIN32

2011-07-05  Simson Garfinkel  <simsong@186.sub-75-197-238.myvzw.com>

	* src/helpers.cpp: moved setup_expert_mode to main.cpp, because it's actually helping to parse the command line.
	removed my_basename, since it is now done on strings in dig.cpp

2011-07-05  Simson Garfinkel  <simsong@it012176.ern.nps.edu>

	* Makefile.am (SUBDIRS): hashdeep subdir renamed to be src, since it is now src for everybody.

2011-07-04  Simson Garfinkel  <simsong@imac3.home>

	* hashdeep/main.cpp: added conditional to use built-in __progname if compiling under WIN32

	* hashdeep/Makefile.am (hashdeep_SOURCES): removed tchar-local.h and added wstring.h

	* hashdeep/dig.cpp (clean_name): changed mode_relative to opt_relative

2011-07-03  Simson Garfinkel  <simsong@imac3.home>

	* hashdeep/dig.cpp (should_hash_symlink): changed stat structure from _tstat_t to _tstati64

	* configure.ac: added -DWINVER=0x0500 to get Windows UTF-8 conversion. mingw targets for 0x0400 (

	* hashdeep/main.h (std::vector): file_type_t changed to hashfile_format, since that describes what it actually is.

	* hashdeep/Makefile.am (hashdeep_SOURCES): removed cycles.cpp.
